<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="chocolate">Chocolate</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="orderFor">order for</string>
    <string name="minusSign">-</string>
    <string name="plusSign">+</string>
</resources>
